--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,16 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@lucia-auth/adapter-sqlite": "^3.0.0",
     "astro": "^4.3.5",
     "astro-navbar": "^2.3.1",
+    "better-sqlite3": "^9.4.3",
+    "lucia": "^3.0.1",
+    "oslo": "^1.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9"
   }
 }
